# Linker-BI

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: claude.yml
bi_agent/: main.py
docs/sprints-tracking/: sprint1.md
src/: state.py
src/linker_bi/: config.py  state.py
src/linker_bi/agents/: __init__.py  base.py  discoveryagent.py
src/linker_bi/prompts/: discoveryagent_prompts.py
tests/: conftest.py  test_discoveryagent.py
