[project]
name = "bi-agent"
version = "0.1.0"
description = "BI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.15.9"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[project.scripts]
bi-agent = "bi_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bi_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
