[project]
name = "bi-agent"
version = "0.1.0"
description = "BI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = ["ruff>=0.15.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
