[project]
name = "linker-bi"
version = "0.1.0"
description = "BI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linker_bi"]
sources = ["src"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
